# haskell_rest_api_boilerplate

./: rest-server.cabal
app/: Main.hs
app/Main/: Api.hs  Model.hs
src/: RestServer.hs
src/RestServer/: Config.hs  ConfigReader.hs  Environment.hs  Persistent.hs
src/RestServer/Persistent/: MongoDB.hs  Postgresql.hs
src/RestServer/Persistent/Postgresql/: Config.hs
