name:                rest-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rest-server#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RestServer
                     , RestServer.Config
                     , RestServer.ConfigReader
                     , RestServer.Persistent
                     , RestServer.Persistent.Postgresql
                     , RestServer.Persistent.Postgresql.Config
                     , RestServer.Environment
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , servant
                     , servant-server
                     , warp
                     , wai
                     , wai-extra
                     , monad-logger
                     , resource-pool
                     , persistent
                     , persistent-postgresql
                     , bytestring
                     , ConfigFile

  default-language:    Haskell2010

executable rest-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Main.Api
                     , Main.Model
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , mtl
                     , rest-server
                     , servant
                     , servant-server
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , ConfigFile

  default-language:    Haskell2010

test-suite rest-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rest-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/rest-server
